@@ -47,8 +47,8 @@ nodist_libluajittex_a_SOURCES = \
 	$(dist_libluatex_sources) \
 	$(nodist_libluatex_sources)
 
-$(libluatex_a_OBJECTS): libff.a $(POPPLER_DEPEND)
-$(libluajittex_a_OBJECTS): libjitff.a $(POPPLER_DEPEND)
+$(libluatex_a_OBJECTS): libff.a libmplib.a $(POPPLER_DEPEND)
+$(libluajittex_a_OBJECTS): libjitff.a libmplib.a $(POPPLER_DEPEND)
 
 ## from luatexdir
 ##
